fixed text alignment for label to be underneath div(s)

--- a/css/slide21.css
+++ b/css/slide21.css
@@ -11,11 +11,13 @@ div{
 
 td{
     background-color: lightblue;
+    margin: auto;
+    text-align: center;
 }
 
 .animation-name{
-   text-align: center;
-   margin: auto;
+   background-color: pink;
+   vertical-align: middle;
 }
 
 /* Shake */
